add draft in pipeline

--- a/draft_models/cf_draft_model.ipynb
+++ b/draft_models/cf_draft_model.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd \n",
     "import numpy as np\n",
+    "import pickle \n",
     "from scipy.sparse import coo_matrix\n",
     "from implicit.als import AlternatingLeastSquares"
    ]
@@ -32,84 +33,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "from datasets import load_dataset\n",
     "\n",
     "dataset = load_dataset(\"McAuley-Lab/Amazon-Reviews-2023\", \"5core_last_out_w_his_All_Beauty\", trust_remote_code=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 83,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DatasetDict({\n",
-       "    train: Dataset({\n",
-       "        features: ['user_id', 'parent_asin', 'rating', 'timestamp', 'history'],\n",
-       "        num_rows: 2029\n",
-       "    })\n",
-       "    valid: Dataset({\n",
-       "        features: ['user_id', 'parent_asin', 'rating', 'timestamp', 'history'],\n",
-       "        num_rows: 253\n",
-       "    })\n",
-       "    test: Dataset({\n",
-       "        features: ['user_id', 'parent_asin', 'rating', 'timestamp', 'history'],\n",
-       "        num_rows: 253\n",
-       "    })\n",
-       "})"
-      ]
-     },
-     "execution_count": 83,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "reviews = load_dataset(\"McAuley-Lab/Amazon-Reviews-2023\", \"raw_review_All_Beauty\", trust_remote_code=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'rating': 5.0,\n",
-       " 'title': 'Such a lovely scent but not overpowering.',\n",
-       " 'text': \"This spray is really nice. It smells really good, goes on really fine, and does the trick. I will say it feels like you need a lot of it though to get the texture I want. I have a lot of hair, medium thickness. I am comparing to other brands with yucky chemicals so I'm gonna stick with this. Try it!\",\n",
-       " 'images': [],\n",
-       " 'asin': 'B00YQ6X8EO',\n",
-       " 'parent_asin': 'B00YQ6X8EO',\n",
-       " 'user_id': 'AGKHLEW2SOWHNMFQIJGBECAF7INQ',\n",
-       " 'timestamp': 1588687728923,\n",
-       " 'helpful_vote': 0,\n",
-       " 'verified_purchase': True}"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "reviews['full'][0]"
    ]
   },
   {
@@ -123,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,14 +123,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 50/50 [00:00<00:00, 1224.32it/s]\n"
+      "/Users/haodong/opt/anaconda3/envs/cs294/lib/python3.10/site-packages/implicit/cpu/als.py:95: RuntimeWarning: OpenBLAS is configured to use 8 threads. It is highly recommended to disable its internal threadpool by setting the environment variable 'OPENBLAS_NUM_THREADS=1' or by calling 'threadpoolctl.threadpool_limits(1, \"blas\")'. Having OpenBLAS use a threadpool can lead to severe performance issues here.\n",
+      "  check_blas_config()\n",
+      "100%|██████████| 50/50 [00:00<00:00, 1339.37it/s]\n"
      ]
     }
    ],
@@ -215,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +172,7 @@
        "(253, 30)"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,12 +268,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('cf_retrive.npy', 'wb') as f:\n",
-    "    np.save(f, recommended_products)"
+    "retrieval = {}\n",
+    "for user, idx in user_mapping.items():\n",
+    "    retrieval[user] = list(recommended_products[idx])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('../draft_retrieval/cf_retrieval.pkl', 'wb') as f:\n",
+    "    pickle.dump(retrieval, f)"
    ]
   },
   {
