combined retrieval array to dictionary

--- a/draft_models/cf_draft_model.ipynb
+++ b/draft_models/cf_draft_model.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/haodong/opt/anaconda3/envs/cs294/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd \n",
     "import numpy as np\n",
@@ -132,7 +141,7 @@
      "text": [
       "/Users/haodong/opt/anaconda3/envs/cs294/lib/python3.10/site-packages/implicit/cpu/als.py:95: RuntimeWarning: OpenBLAS is configured to use 8 threads. It is highly recommended to disable its internal threadpool by setting the environment variable 'OPENBLAS_NUM_THREADS=1' or by calling 'threadpoolctl.threadpool_limits(1, \"blas\")'. Having OpenBLAS use a threadpool can lead to severe performance issues here.\n",
       "  check_blas_config()\n",
-      "100%|██████████| 50/50 [00:00<00:00, 1339.37it/s]\n"
+      "100%|██████████| 50/50 [00:00<00:00, 1434.31it/s]\n"
      ]
     }
    ],
@@ -183,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,27 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "B0BTJ6SYKB\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i, x in enumerate(ground_truth):\n",
-    "    if x in recommended_products[i]:\n",
-    "        print(x)\n",
-    "        break"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
