--- a/data_preprocess/generate_metadata.ipynb
+++ b/data_preprocess/generate_metadata.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/haodong/opt/anaconda3/envs/cs294/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import datasets\n",
     "from datasets import load_dataset\n",
@@ -13,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,22 +58,16 @@
     "            'title' : meta['full'][i]['title'],\n",
     "            'average_rating' : meta['full'][i]['average_rating'],\n",
     "            'rating_number' : meta['full'][i]['rating_number'],\n",
-    "            'features' : meta['full'][i]['features'],\n",
-    "            'description' : meta['full'][i]['description'],\n",
-    "            'price' : meta['full'][i]['price'],\n",
-    "            'store' : meta['full'][i]['store'],\n",
-    "            'details' : meta['full'][i]['details'],\n",
-    "            'bought_together' : meta['full'][i]['bought_together']\n",
     "        }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('config/meta_data.json', 'w') as f:\n",
+    "with open('../config/meta_data.json', 'w') as f:\n",
     "    json.dump(meta_data, f)"
    ]
   },
@@ -73,7 +76,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x"
+   ]
   }
  ],
  "metadata": {
